fix(css): Fix header overflow on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -679,16 +679,19 @@
     background: var(--background-color);
     position: fixed;
     top: 0;
-    right: -100%; /* Start off-screen */
+    right: 0;
     height: 100vh;
     width: 100%;
     padding: 2rem;
-    transition: right 0.3s ease-in-out;
     z-index: 5;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out;
+    visibility: hidden;
   }
 
   .Header-nav.is-open {
-    right: 0; /* Slide in */
+    transform: translateX(0);
+    visibility: visible;
   }
 
   .Header-nav a {
